fix(deployer): Xlint batch 1 — real generics + easy wins (#2028) (#2418)
* fix(deployer): Xlint batch 1 — real generics + easy wins (#2028)

Partial clear of perc-deployer javac Xlint diagnostics (parent #2200):
- PSDependency: Comparable<PSDependency>, typed Set/List/Iterator helpers
- PSArchiveSummary/ExportDescriptor/ArchiveDetail/IdMap package+iterator types
- PSDeploymentHandler request roots, IdTypes, reflection, parent map generics
- PSLogHandler redundant cast removal; valueOf for Long/Boolean for-removal
- Catalog: static PSXmlTreeWalker.getElementData; drop redundant casts

Tests: PSDependencyTest.compareTo, PSArchiveSummaryTest.getPackageType;
PSArchiveTest package iterator typing.

Standalone: cd deployer && ../mvnw clean install (176 tests, 0 failures).

Partial for #2028
Refs #2200

> Co-Authored by Grok Build using grok-4.5 with agent main.

* fix(deployer): address Kilo review on PSDependency Comparable typing (#2028)

- Align null-arg IllegalArgumentException message with param name `dep`
- Extend unit tests for cross-subclass compareTo + TreeSet ordering
- Confirms no PSDependency subclass overrides compareTo(Object)

> Co-Authored by Grok 1.0.0 (3cd0d0cbce) using grok-4-1-thinking-maximum-thinking-effort with agent overnight-pr-followup.